if for cuda name in train

--- a/csa_bruteforce_params.ini
+++ b/csa_bruteforce_params.ini
@@ -8,6 +8,7 @@ split_nums = []
 model_name = tcnns
 only_cross_study = False
 epochs = 800
+uses_cuda_name = False
 
 ### Source and target data sources
 ## Set 1 - full analysis
